syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service StoreApiService {
	rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {
		option (google.api.http) = {
			post: "/bucket/create"
            body: "*"
		};
	}
	rpc PutObject(PutObjectRequest) returns (PutObjectResponse) {
		option (google.api.http) = {
			post: "/object/upload"
            body: "*"
		};
	}
	
	rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
		option (google.api.http) = {
			post: "/object/download"
			body: "*"
		};
	}

	rpc GetObjectPresignedUrl(GetObjectPresignedUrlRequest) returns (GetObjectPresignedUrlResponse) {
		option (google.api.http) = {
			post: "/object/downloadurl"
			body: "*"
		};
	}

	rpc PutObjectPresignedUrl(PutObjectPresignedUrlRequest) returns (PutObjectPresignedUrlResponse) {
		option (google.api.http) = {
			post: "/object/uploadurl"
			body: "*"
		};
	}

	rpc UpdateConfigStoreInfo(UpdateConfigStoreInfoRequest) returns (UpdateConfigStoreInfoResponse) {
		option (google.api.http) = {
			post: "/config/upload"
			body: "*"
		};
	}

	rpc GetConfigStoreInfo(GetConfigStoreInfoRequest) returns (GetConfigStoreInfoResponse) {
		option (google.api.http) = {
			get: "/config/download"
		};
	}
}

message CreateBucketRequest {
	string bucketname = 2;
	string publicread = 4;
}

message CreateBucketResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message PutObjectRequest {
	string bucketname = 2;
	string key = 3;
	string publicread = 4;
	string contenttype = 5;
	int64 contentmaxlength = 6;
	string filecontent = 7;
	int64 expiretime = 8;
}

message PutObjectResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message GetObjectRequest {
	string bucketname = 2;
	string key = 3;
	string contenttype = 4;
}

message GetObjectResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message GetObjectPresignedUrlRequest {
	string bucketname = 2;
	string key = 3;
	int64 expiretime = 4;
}

message GetObjectPresignedUrlResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message PutObjectPresignedUrlRequest {
	string bucketname = 2;
	string key = 3;
	string publicread = 4;
	string contenttype = 5;
	int64 contentmaxlength = 6;
	int64 expiretime = 7;
}

message PutObjectPresignedUrlResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;  
}

message UpdateConfigStoreInfoRequest {
	string domain = 2;
	string accesskey = 3;
	string secretkey = 4;
	string region = 5;
}

message UpdateConfigStoreInfoResponse {
	int32 code = 1;
	string msg = 2;
    string data = 3;
}

message GetConfigStoreInfoRequest {
}

message GetConfigStoreInfoResponse {
	int32 code = 1;
	string msg = 2;
    ConfigInfo data = 3;
}

message ConfigInfo {
    string accesskey = 1;   
	string secretkey = 2;
	string region = 3;
	string endpoint = 4;
}